🔒 BACKUP PRE-CONCILIACAO: Sistema antes de implementar módulo de conciliação bancária OFX + templates adquirentes

--- a/docker-compose.development.yml
+++ b/docker-compose.development.yml
@@ -53,10 +53,10 @@ services:
       - OPENAI_API_KEY=
       - BLING_CLIENT_ID=
       - BLING_CLIENT_SECRET=
-      - STONE_CLIENT_ID=
-      - STONE_CLIENT_SECRET=
-      - STONE_MERCHANT_ID=
-      - STONE_SANDBOX=true
+      - STONE_CLIENT_ID=sk_cb70739f3d554f57a84db078586f5637
+      - STONE_CLIENT_SECRET=sk_cb70739f3d554f57a84db078586f5637
+      - STONE_MERCHANT_ID=691890226
+      - STONE_SANDBOX=false
       - RATE_LIMIT_ENABLED=false
       - RATE_LIMIT_PER_MINUTE=1000
       - LOG_LEVEL=DEBUG
