fix: corrigir proxy_redirect para capturar redirects relativos

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -131,11 +131,12 @@ http {
             # Rewrite /api/xxx to /xxx
             rewrite ^/api(.*)$ $1 break;
             
-            # Proxy to backend
+           # Proxy to backend
             proxy_pass http://backend;
             
             # Fix redirects from backend (307/308)
             proxy_redirect http://localhost:8000/ https://$host/api/;
+            proxy_redirect ~^/(.*)$ https://$host/api/$1;
             
             # Proxy headers
             proxy_set_header Host $host;
