--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -135,12 +135,7 @@ http {
             proxy_pass http://backend;
             
             # Fix redirects from backend (307/308)
-            proxy_redirect http://localhost:8000/ https://$host/api/;
-            proxy_redirect ~^/(.*)$ https://$host/api/$1;
-            
-            # Proxy headers
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
+            proxy_redirect / https://$host/api/;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $server_name;
