--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -134,8 +134,7 @@ http {
            # Proxy to backend
             proxy_pass http://backend;
             
-            # Fix redirects from backend (307/308)
-            proxy_redirect / https://$host/api/;
+            # Fix redirects from backend (307/308)            proxy_redirect http://localhost:8000/ https://$host/api/;            proxy_redirect / https://$host/api/;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $server_name;
