--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -131,10 +131,17 @@ http {
             # Rewrite /api/xxx to /xxx
             rewrite ^/api(.*)$ $1 break;
             
-           # Proxy to backend
+            # Proxy to backend
             proxy_pass http://backend;
             
-            # Fix redirects from backend (307/308)            proxy_redirect http://localhost:8000/ https://$host/api/;            proxy_redirect / https://$host/api/;
+            # Fix redirects from backend (307/308)
+            absolute_redirect off;
+            proxy_redirect http://localhost:8000/ /api/;
+            proxy_redirect / /api/;
+            
+            # Proxy headers
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $server_name;
