fix: usar regex no proxy_redirect para capturar todos os redirects relativos

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -137,7 +137,7 @@ http {
             # Fix redirects from backend (307/308)
             absolute_redirect off;
             proxy_redirect http://localhost:8000/ /api/;
-            proxy_redirect / /api/;
+            proxy_redirect ~^/(.*)$ $scheme://$host/api/$1;
             
             # Proxy headers
             proxy_set_header Host $host;
