fix: remover trailing slashes de URLs de API no nginx

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -128,6 +128,9 @@ http {
             # Rate limiting
             limit_req zone=api_limit burst=20 nodelay;
             
+            # Remove trailing slashes from API requests
+            rewrite ^(/api.*)/$ $1 permanent;
+            
             # Rewrite /api/xxx to /xxx
             rewrite ^/api(.*)$ $1 break;
             
