fix: usar redirect em vez de permanent para trailing slash

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -128,10 +128,10 @@ http {
             # Rate limiting
             limit_req zone=api_limit burst=20 nodelay;
             
-            # Remove trailing slashes from API requests
-            rewrite ^(/api.*)/$ $1 permanent;
+            # Remove trailing slashes from API requests (301 redirect)
+            rewrite ^(/api.*)/$ $1 redirect;
             
-            # Rewrite /api/xxx to /xxx
+            # Rewrite /api/xxx to /xxx for backend
             rewrite ^/api(.*)$ $1 break;
             
             # Proxy to backend
