fix: remover trailing slashes internamente sem redirect externo

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -128,8 +128,8 @@ http {
             # Rate limiting
             limit_req zone=api_limit burst=20 nodelay;
             
-            # Remove trailing slashes from API requests (301 redirect)
-            rewrite ^(/api.*)/$ $1 redirect;
+            # Remove trailing slashes INTERNALLY (no external redirect)
+            rewrite ^(/api.*)/$ $1;
             
             # Rewrite /api/xxx to /xxx for backend
             rewrite ^/api(.*)$ $1 break;
