--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -128,8 +128,8 @@ http {
             # Rate limiting
             limit_req zone=api_limit burst=20 nodelay;
             
-            # Remove trailing slashes INTERNALLY (no external redirect)
-            rewrite ^(/api.*)/$ $1;
+            # Remove trailing slashes INTERNALLY and reprocess
+            rewrite ^(/api.*)/$ $1 last;
             
             # Rewrite /api/xxx to /xxx for backend
             rewrite ^/api(.*)$ $1 break;
