fix: simplificar proxy_redirect e usar "

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -128,19 +128,15 @@ http {
             # Rate limiting
             limit_req zone=api_limit burst=20 nodelay;
             
-            # Remove trailing slashes INTERNALLY and reprocess
-            rewrite ^(/api.*)/$ $1 last;
-            
             # Rewrite /api/xxx to /xxx for backend
             rewrite ^/api(.*)$ $1 break;
             
             # Proxy to backend
             proxy_pass http://backend;
             
-            # Fix redirects from backend (307/308)
-            absolute_redirect off;
-            proxy_redirect http://localhost:8000/ /api/;
-            proxy_redirect ~^/(.*)$ $scheme://$host/api/$1;
+            # Fix redirects from backend (307/308) - rewrite Location header
+            proxy_redirect http://localhost:8000/ https://$http_host/api/;
+            proxy_redirect / https://$http_host/api/;
             
             # Proxy headers
             proxy_set_header Host $host;
