--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -135,8 +135,7 @@ http {
             proxy_pass http://backend;
             
             # Fix redirects from backend (307/308) - rewrite Location header
-            proxy_redirect http://localhost:8000/ https://$http_host/api/;
-            proxy_redirect / https://$http_host/api/;
+            proxy_redirect ~^http://localhost:8000/(.*)$ https://$http_host/api/$1;
             
             # Proxy headers
             proxy_set_header Host $host;
