fix: usar duas regras explícitas de proxy_redirect para localhost e backend

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -135,8 +135,8 @@ http {
             proxy_pass http://backend;
             
             # Fix redirects from backend (307/308) - rewrite Location header
-            # Matches: http://backend:8000/path or http://localhost:8000/path
-            proxy_redirect ~^http://[^/]+/(.*)$ https://$http_host/api/$1;
+            proxy_redirect http://localhost:8000/ https://$http_host/api/;
+            proxy_redirect http://backend:8000/ https://$http_host/api/;
             
             # Proxy headers
             proxy_set_header Host $host;
