fix: adicionar proxy_redirect para http(s)://\/

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -137,6 +137,8 @@ http {
             # Fix redirects from backend (307/308) - rewrite Location header
             proxy_redirect http://localhost:8000/ https://$http_host/api/;
             proxy_redirect http://backend:8000/ https://$http_host/api/;
+            proxy_redirect http://$http_host/ https://$http_host/api/;
+            proxy_redirect https://$http_host/ https://$http_host/api/;
             
             # Proxy headers
             proxy_set_header Host $host;
