--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -123,6 +123,24 @@ http {
         }
         
         # ========================================
+        # WEBSOCKET - precisa vir ANTES do /api
+        # ========================================
+        location /api/ws/ {
+            rewrite ^/api(.*)$ $1 break;
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 3600s;
+            proxy_send_timeout 3600s;
+            proxy_connect_timeout 60s;
+        }
+
+        # ========================================
         # BACKEND API
         # ========================================
         location /api {
@@ -134,6 +152,7 @@ http {
             
             # Proxy to backend
             proxy_pass http://backend;
+            proxy_http_version 1.1;
             
             # Fix redirects from backend (307/308) - rewrite Location header
             proxy_redirect http://localhost:8000/ https://$http_host/api/;
@@ -147,6 +166,8 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $server_name;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
             
             # Timeouts
             proxy_connect_timeout 60s;
