chore: ignora arquivos temporarios do Vite e atualiza config mcp-debug-tools

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,6 @@ Comparação*.csv
 
 # Certificados locais gerados automaticamente (NUNCA versionar)
 nginx/ssl/*.pem
+
+# Vite temp files
+frontend/vite.config.js.timestamp-*.mjs
