feat(analytics): integra Google Analytics 4 na loja do e-commerce
- Adiciona script GA4 no index.html (ativa so quando VITE_GA_MEASUREMENT_ID estiver configurado)
- Cria frontend/src/services/analytics.js com funcoes de rastreamento
- Rastreia os eventos: page_view, view_item, add_to_cart, view_cart, begin_checkout, purchase
- Variavel VITE_GA_MEASUREMENT_ID adicionada ao .env.production (vazia por enquanto — usuario precisa criar conta no analytics.google.com e inserir o ID G-XXXXXXXXXX)

--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,6 @@
 ﻿VITE_API_URL=/api
+
+# Google Analytics 4 — cole aqui o ID que você pegar em analytics.google.com
+# Formato: G-XXXXXXXXXX
+# Enquanto estiver vazio, o rastreamento fica desativado (não dá erro)
+VITE_GA_MEASUREMENT_ID=
