--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -3,4 +3,4 @@
 # Google Analytics 4 — cole aqui o ID que você pegar em analytics.google.com
 # Formato: G-XXXXXXXXXX
 # Enquanto estiver vazio, o rastreamento fica desativado (não dá erro)
-VITE_GA_MEASUREMENT_ID=
+VITE_GA_MEASUREMENT_ID=G-WPC2ZCFNWW
