fix: nginx serve /uploads/ para imagens do ecommerce

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -96,6 +96,16 @@ http {
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
         
         # ========================================
+        # UPLOADS - IMAGENS DO ECOMMERCE
+        # ========================================
+        location /uploads/ {
+            alias /app/uploads/;
+            expires 7d;
+            add_header Cache-Control "public";
+            add_header Access-Control-Allow-Origin "*";
+        }
+
+        # ========================================
         # FRONTEND - REACT APP
         # ========================================
         location / {
