--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -88,6 +88,7 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
       - ./frontend/dist:/usr/share/nginx/html:ro
+      - ./backend/uploads:/app/uploads:ro
     depends_on:
       - backend
     networks:
