fix: corrigir TENANT_ID do app mobile (apontava para tenant inexistente)

--- a/app-mobile/eas.json
+++ b/app-mobile/eas.json
@@ -5,16 +5,25 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "env": {
+        "EXPO_PUBLIC_TENANT_ID": "180d9cbf-5dcb-4676-bf11-dcbd91ed444b"
+      }
     },
     "preview": {
       "distribution": "internal",
       "android": {
         "buildType": "apk"
+      },
+      "env": {
+        "EXPO_PUBLIC_TENANT_ID": "180d9cbf-5dcb-4676-bf11-dcbd91ed444b"
       }
     },
     "production": {
-      "autoIncrement": true
+      "autoIncrement": true,
+      "env": {
+        "EXPO_PUBLIC_TENANT_ID": "180d9cbf-5dcb-4676-bf11-dcbd91ed444b"
+      }
     }
   },
   "submit": {
